[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/game/Camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/EnemySpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/levels/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/game/MainGameScene.gd" type="Script" id=5]
[ext_resource path="res://scenes/game/PathRec.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/game/FollowPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/menu/InGameUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/TitleFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://scenes/menu/IncreaseOverTimeLabel.tscn" type="PackedScene" id=10]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.0784314, 0.129412, 0.239216, 1 )
ambient_light_color = Color( 1, 0.74902, 0.411765, 1 )
ambient_light_energy = 0.5
fog_color = Color( 0.180392, 0.768627, 0.713726, 1 )
glow_enabled = true
glow_intensity = 8.0
glow_strength = 0.62
glow_bloom = 0.12
glow_blend_mode = 0

[sub_resource type="BoxShape" id=2]
extents = Vector3( 250, 1, 2.5 )

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 3 )
size = Vector2( 500, 5 )

[node name="Main" type="Spatial"]
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0

[node name="Button" type="Button" parent="CanvasLayer"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -66.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseOverTimeLabel" parent="CanvasLayer" instance=ExtResource( 10 )]
margin_left = 975.0
margin_top = 6.0
margin_right = 1015.0
margin_bottom = 66.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"

[node name="StaticBody" type="StaticBody" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="TestPlane" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 4 )

[node name="Map" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.76631, 0 )
gravity = Vector3( 0, -100, 0 )
jump_speed = 50

[node name="EnemySpawner" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )

[node name="PathRec" parent="." instance=ExtResource( 6 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 30, 0 )
light_energy = 0.1

[node name="CameraMoveTimeout" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Camera" parent="." instance=ExtResource( 1 )]

[node name="FollowPlayer" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="complete" from="CanvasLayer/IncreaseOverTimeLabel" to="." method="_on_IncreaseOverTimeLabel_complete"]
[connection signal="follow_entered" from="Map" to="." method="_on_Map_follow_entered"]
[connection signal="player_entered" from="Map" to="." method="_on_Map_player_entered"]
[connection signal="timeout" from="CameraMoveTimeout" to="." method="_on_CameraMoveTimeout_timeout"]
[connection signal="death" from="FollowPlayer" to="." method="_on_FollowPlayer_death"]
